Fixed bug: added nowrap to the header

--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -24,6 +24,8 @@
         }
     .main-nav-container {
         justify-content: flex-end;
+        white-space: nowrap;
+
 
         .main-nav {
             margin-inline-end: 10px;
